scrollbar height fixed

--- a/src/app/Procurement/Purchaseorder/pomapprover/pomapprover.component.css
+++ b/src/app/Procurement/Purchaseorder/pomapprover/pomapprover.component.css
@@ -9,7 +9,7 @@ mat-toolbar{
     margin-left: 20px;
     margin-bottom: 20px;
     width: 1100px;
-    height:250vh;
+    height:230vh;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25) !important;
   }
   /* .topleft{
