--- a/src/app/pages/progress-sheet/progress-sheet.component.css
+++ b/src/app/pages/progress-sheet/progress-sheet.component.css
@@ -98,12 +98,11 @@
 .scroll-bar1{
         
    
-  height: 500px;
+  min-height: 200px;
   width:93%;
   margin-left: 40px;
   margin-bottom: 100px;
   overflow: auto;
-
   }
 
 ::-webkit-scrollbar {
